# DART-mcp-server

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  README_dev_uv.md  pyproject.toml  smithery.yaml
mcp_server/: __main__.py  pyproject.toml  run_server.py
mcp_server/api/: DART_api_client.py
mcp_server/apimanager/: Httpx_manager.py  base.py
mcp_server/apimanager/exception/: base.py
mcp_server/configs/: __init__.py  apidefine.py  config_builder.py  env.py  path.py  tool.py  usecase.py
mcp_server/configs/terminology_alert/: base.py  corpinfo.py  disclosurelist.py
mcp_server/dart/: __init__.py  mcp_factory.py
mcp_server/dart/callers/: __init__.py
mcp_server/dart/callers/api1_disclosure_info/: __init__.py  api1_1_get_disclosurelist.py  api1_1_search_report.py  api1_2_get_corpinfo.py  api1_3_get_disclosure.py  api1_4_request_corplist.py  api1_4_update_corplist.py  api1_5_get_corpcode.py  api1_5_search_corpcode.py  api1_6_search_candidates.py  disclosure_info.feature  test_api1_1_search_report.py
mcp_server/dart/docstrings/: __init__.py
mcp_server/dart/parser/: __init__.py  get_corp_candidates.py  xml_navigator.py
mcp_server/dart/prompts/: __init__.py  analyser_finstats.py
mcp_server/dart/schemas/: __init__.py
mcp_server/data/: README.md
mcp_server/periodic_disclosure/: __init__.py
mcp_server/search_info/: request_corplist.py
mcp_server/tests/: test_calculator_gwt.py
mcp_server/tests/step_definitions/: test_example.py
mcp_server/utils/: __init__.py  calculator.py  logger copy.py  logger.py  path_manager copy.py  path_manager.py
(+312 files in other folders)
